CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_verif_hist__x/sfrosit_t_indiv_verif_hist__x.object-meta.xml
<CustomObject>
    <description>sfrosit$t_indiv_verif_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfrosit$t_indiv_verif_hist</externalName>
    <label>Individual Verification History</label>
    <pluralLabel>Individual Verification History</pluralLabel>
</CustomObject>