CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_verif_hist__x/fields/cde_source_vrfyd_immu__c.field-meta.xml
<CustomField>
    <fullName>cde_source_vrfyd_immu__c</fullName>
    <description>cde_source_vrfyd_immu</description>
    <externalDeveloperName>cde_source_vrfyd_immu</externalDeveloperName>
    <label>Immunization How Verified</label>
    <length>255</length>
    <type>Text</type>
</CustomField>