CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_verif_hist__x/fields/idn_indiv_verif__c.field-meta.xml
<CustomField>
    <fullName>idn_indiv_verif__c</fullName>
    <description>idn_indiv_verif</description>
    <externalDeveloperName>idn_indiv_verif</externalDeveloperName>
    <label>Individual Verification ID</label>
    <length>50</length>
    <referenceTargetField>T_INDIV_VERIF__c.IDN_EXTNL__c</referenceTargetField>
    <referenceTo>T_INDIV_VERIF__c</referenceTo>
    <relationshipLabel>Individual Verification Legacy History</relationshipLabel>
    <relationshipName>sfrosit_t_indiv_verif_hist</relationshipName>
    <type>IndirectLookup</type>
</CustomField>