CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_verif_hist__x/fields/nbr_seq_info_indiv__c.field-meta.xml
<CustomField>
    <fullName>nbr_seq_info_indiv__c</fullName>
    <description>nbr_seq_info_indiv</description>
    <externalDeveloperName>nbr_seq_info_indiv</externalDeveloperName>
    <label>Individual Information sequence number</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>